# sw-cpp-battle-test

./: .clang-uml  .gitignore  CMakeLists.txt  KNOWN_ISSUES.md  README.md
src/Core/: CMakeLists.txt
src/Core/Battle/Actions/: Action.cpp  Action.hpp  ActionContext.cpp  ActionContext.hpp  ActionManager.cpp  ActionManager.hpp  IAction.hpp  IActionManager.hpp
src/Core/Battle/Combat/: IActionExecutorService.hpp
src/Core/Map/: IDistanceCalculator.hpp  IMap.hpp  IPosition.hpp  Position.hpp
src/Core/Simulation/: GameSimulator.cpp  GameSimulator.hpp  GameTime.cpp  GameTime.hpp  IEventLogger.hpp
src/Core/Simulation/Managers/: IActionAvailabilityChecker.hpp  IGameContinuationChecker.hpp  IMapManager.hpp  IUnitManager.hpp  IUnitSpawnValidator.hpp
src/Core/Units/: Unit.cpp  Unit.hpp  UnitFactory.hpp  UnitId.hpp  UnitProperties.hpp
src/Core/Units/Components/Health/: Health.cpp  Health.hpp  IHealth.hpp
src/Core/Units/Components/Movement/: Movement.cpp  (+2 more)
src/Core/Units/Services/: ILifecycleService.hpp
src/Features/: CMakeLists.txt
src/Features/Battle/Actions/: AttackAction.cpp  AttackAction.hpp  DefaultActionManager.cpp  DefaultActionManager.hpp  MeleeAttack.cpp  MeleeAttack.hpp  Move.cpp  Move.hpp  RangedAttack.cpp  RangedAttack.hpp
src/Features/Battle/Combat/: ActionExecutorService.cpp  ActionExecutorService.hpp
src/Features/Map/: Map.cpp  Map.hpp  Position2D.cpp  Position2D.hpp
src/Features/Map/DistanceCalculators/: ChebyshevDistanceCalculator.cpp  ChebyshevDistanceCalculator.hpp  ManhattanDistanceCalculator.cpp  ManhattanDistanceCalculator.hpp
src/Features/Simulation/Managers/: ActionAvailabilityChecker.cpp  ActionAvailabilityChecker.hpp  DefaultUnitManager.cpp  DefaultUnitManager.hpp  GameContinuationChecker.cpp  GameContinuationChecker.hpp  MapManager.cpp  MapManager.hpp  UnitSpawnValidator.cpp  UnitSpawnValidator.hpp
src/Features/Units/Services/: LifecycleService.cpp  LifecycleService.hpp  MovementRuleService.cpp  MovementRuleService.hpp
src/Features/Units/Types/: Hunter.cpp  Hunter.hpp  Swordsman.cpp  Swordsman.hpp
src/IO/: CMakeLists.txt
src/IO/System/: EventLog.hpp  EventLogAdapter.hpp  TypeRegistry.hpp
(+6 files in other folders)
